# Audio-Lion

./: .gitignore  .gitmodules  README.md  SECURITY.md  package.json  renovate.json  tailwind.config.cjs
.github/workflows/: rust.yml
assets/: tech-used.md
audio_test/: Cargo.toml  README.md
audio_test/src/: main.rs
db_test/src/: main.rs
drivers/: README.md
installers/alpha-build/windows/v0.0.0/: audio_lion_0.0.0_x64_en-US.msi
installers/alpha-build/windows/v0.0.2/: Audio Lion_0.0.2_x64_en-US.msi
installers/alpha-build/windows/v0.0.3/: Audio Lion_0.0.3_x64_en-US.msi
installers/alpha-build/windows/v0.0.4/: Audio Lion_0.0.4_x64_en-US.msi
installers/alpha-build/windows/v0.0.5/: Audio Lion_0.0.5_x64_en-US.msi
installers/alpha-build/windows/v0.0.6/: Audio Lion_0.0.6_x64_en-US.msi
installers/windows/v0.0.1/: Audio Lion_0.0.1_x64_en-US.msi
mongodb_test/: Cargo.toml
mongodb_test/src/: test.rs
resources/: dev.md  roadmap.md
scripts/: check-re.py  git.sh
sqldb_test/: Cargo.toml  test.db
sqldb_test/src/: main.rs
src/: app.css  hooks.server.ts  http.ts
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/bundler/: LICENSE.rtf  strings.wxl
src-tauri/icons/: icon.icns
src-tauri/src/: audio_player.rs  commands.rs  config.rs  helpers.rs  main.rs  manager.rs  types.rs  utils.rs
src-tauri/src/audio/: mod.rs  music_track.rs  output.rs  player.rs  queue.rs
src-tauri/src/player/: mod.rs  music_track.rs  output.rs  queue.rs  types.rs  utils.rs
src-tauri/src/services/: http.rs
src/lib/: bindings.ts
src/lib/components/: AppConfig.svelte  Greet.svelte  Home.svelte  audio-controller.svelte  navbar.svelte
src/lib/components/config/: FetchSystemFile.svelte  reset.svelte  view.svelte
src/lib/config/: index.ts
src/lib/store/: AppConfig.ts
src/lib/stores/: AppConfig.ts  PlayerStore.ts  UserStore.ts
src/lib/types/: AppConfig.ts  commands.ts  config.ts  utils.ts
src/lib/utils/: format.ts  loaders.ts  logger.ts  tauri.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/config/: +page.svelte
src/routes/player/: +page.svelte
src/routes/test/: +page.svelte
src/routes/user/: +page.svelte  +page.ts
src/utils/: utils.ts
test/audio_test/: Cargo.toml
test/audio_test/src/: main.rs
test/mongodb_test/src/: main.rs
(+2 files in other folders)
