[package]
name = "audio_lion"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tokio = "1.25.0"
anyhow = "1.0.69"
thiserror = "1.0.38"
tokio-util = { version = "0.7", features = ["rt"] }
rodio = "0.17.1"
symphonia = { version = "0.5.2", features = ["aac", "alac", "isomp4", "mp3"] }
rand = "0.8.5"

[features]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.26.0"
libpulse-simple-binding = "2.25.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
rb = "0.4.1"
cpal = { version = "0.14.1"}
dasp = "0.11.0"
