[package]
name = "audio_lion"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
# Core
tauri = { version = "1.2", features = ["http-all", "notification-all", "shell-open"] }

# Plugins
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

# Serialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
window-shadows = "0.2.1"

# Utilities
tokio = { version = "1.25.0", features = ["full"] }
anyhow = "1.0.69"
thiserror = "1.0.38"
specta = "1.0.0"
tauri-specta = { version = "1.0.0", features = ["typescript"] }
lazy_static = "1.4.0"
rand = "0.8.5"

[features]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]